// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider Snapshots shows component with a label 1`] = `
<div
  className="sc-bdVaJa llsCHA"
>
  <label
    className="sc-bwzfXH blRzDa"
  >
    label
  </label>
  <div
    aria-disabled={false}
    className="input-range"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <span
      className="input-range__label input-range__label--min"
    >
      <span
        className="input-range__label-container"
      >
        0
      </span>
    </span>
    <div
      className="input-range__track input-range__track--background"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="input-range__track input-range__track--active"
        style={
          Object {
            "left": "0%",
            "width": "0%",
          }
        }
      />
      <span
        className="input-range__slider-container"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
      >
        <span
          className="input-range__label input-range__label--value"
        >
          <span
            className="input-range__label-container"
          >
            0
          </span>
        </span>
        <div
          aria-controls={undefined}
          aria-labelledby={undefined}
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="input-range__slider"
          draggable="false"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex="0"
        />
      </span>
    </div>
    <span
      className="input-range__label input-range__label--max"
    >
      <span
        className="input-range__label-container"
      >
        100
      </span>
    </span>
  </div>
</div>
`;

exports[`RangeSlider Snapshots shows component without a label 1`] = `
<div
  className="sc-bdVaJa llsCHA"
>
  <div
    aria-disabled={false}
    className="input-range"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <span
      className="input-range__label input-range__label--min"
    >
      <span
        className="input-range__label-container"
      >
        0
      </span>
    </span>
    <div
      className="input-range__track input-range__track--background"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="input-range__track input-range__track--active"
        style={
          Object {
            "left": "0%",
            "width": "0%",
          }
        }
      />
      <span
        className="input-range__slider-container"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
      >
        <span
          className="input-range__label input-range__label--value"
        >
          <span
            className="input-range__label-container"
          >
            0
          </span>
        </span>
        <div
          aria-controls={undefined}
          aria-labelledby={undefined}
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="input-range__slider"
          draggable="false"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex="0"
        />
      </span>
    </div>
    <span
      className="input-range__label input-range__label--max"
    >
      <span
        className="input-range__label-container"
      >
        100
      </span>
    </span>
  </div>
</div>
`;
